# materials-triage

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml  skills-lock.json
.claude/: README.md  settings.global.json.example  settings.json  statusline-command.sh
.claude/commands/: deep-plan.md  handoff.md  sync-main.md
.claude/skills/verify-skill-package/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker-image.yml
.lavish/: deep-plan-rendered.html
docs/: design-note.md  fast-track-learnings.md  handoff-archive.md  handoff.md  session-design-log.md  ultimate-design.md
docs/design/: 0001-retrieval-rest-adapters.md  0002-literature-abstracts-only.md  0003-orchestrator-on-langgraph.md  0004-guardrail-architecture-threat-model.md  0005-hosting-and-step-cache.md  0006-robustness-model.md
notebooks/: demo_hypothesis_to_spec.ipynb  demo_rag_to_spec.ipynb  deterministic_pipeline_demo.ipynb  literature_rag_demo.ipynb
runs/: demo-full.json
scripts/: demo.py
server/mt_server/: app.py  policy.py
server/mt_server/templates/: index.html
server/tests/: test_policy.py
src/materials_triage/: __init__.py  chat.py  cli.py  doctor.py  render.py
src/materials_triage/agent/: llm.py  orchestrator.py  prompts.py  serde.py  validator.py
src/materials_triage/core/: __init__.py  critique.py  elements.py  fidelity.py  hypothesis.py  ranking.py  run_trace.py  schema.py  scoring.py  synthesis.py
src/materials_triage/memory/: store.py
src/materials_triage/policy/: __init__.py  guardrails.py
src/materials_triage/retrieval/: rag.py
src/materials_triage/sources/: __init__.py  _mp_fields.py  base.py  materials_project.py  stubs.py
tests/: conftest.py  test_chat.py  test_cli.py  test_critique.py  test_doctor.py  test_fidelity.py  test_gen_mp_vocab.py  test_guardrails.py  test_hypothesis.py  test_llm.py  test_memory_store.py  test_orchestrator.py  test_prompts.py  test_rag.py  test_ranking.py  test_render.py  test_run_trace.py  test_schema.py  test_scoring.py  test_smoke.py  test_sources_base.py  test_sources_materials_project.py  test_sources_stubs.py  test_synthesis.py  test_validator.py
tests/fixtures/: mp_openapi_summary.json
tools/: gen_mp_vocab.py  mp_summary_schema.json
