[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "materials-triage"
version = "0.0.1"
description = "An agent for triaging materials-research inputs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["materials_triage*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B), pyupgrade (UP).
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
