[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "materials-triage"
version = "0.0.1"
description = "An agent for triaging materials-research inputs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2",
    "pydantic>=2",
    "rank-bm25>=0.2",
    "requests>=2",
]

[project.scripts]
materials-triage = "materials_triage.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "python-dotenv>=1",  # conftest.py loads .env so live tests can read credentials
]
# Optional: run the live demo notebook (notebooks/deterministic_pipeline_demo.ipynb).
notebook = [
    "jupyter>=1",
    "ipykernel>=6",
    "python-dotenv>=1",
]
# Optional: the real Bedrock transport for the LLM provider (agent/llm.py).
# Imported lazily, so offline tests never need it; required only for the live path.
llm = [
    "langchain-aws>=0.2",
]
# Optional: the throwaway local web GUI (server/mt_server/app.py). Edge-only,
# lazy-imported; the pure core never depends on it. Launch with:
#   uvicorn mt_server.app:app --reload --app-dir server
gui = [
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "jinja2>=3",
    "python-multipart>=0.0.7",  # FastAPI Form(...) parses the POST body via this
    "python-dotenv>=1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["materials_triage*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B), pyupgrade (UP).
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Live tests hit the real network; deselected by default. Run with: pytest -m live
addopts = "-m 'not live'"
markers = [
    "live: exercises a real external API (Materials Project needs X_API_KEY; OpenAlex needs network; Bedrock needs AWS credentials)",
]
