[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "materials-triage"
version = "0.0.1"
description = "An agent for triaging materials-research inputs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2",
    "pydantic>=2",
    "rank-bm25>=0.2",
    "requests>=2",
]

[project.scripts]
materials-triage = "materials_triage.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "python-dotenv>=1",  # conftest.py loads .env so live tests can read credentials
]
# Optional: run the live demo notebook (notebooks/deterministic_pipeline_demo.ipynb).
notebook = [
    "jupyter>=1",
    "ipykernel>=6",
    "python-dotenv>=1",
]
# Optional: the real Bedrock transport for the LLM provider (agent/llm.py).
# Imported lazily, so offline tests never need it; required only for the live path.
llm = [
    "langchain-aws>=0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["materials_triage*"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B), pyupgrade (UP).
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests", "server/tests"]
# The server/ web layer is a sibling package that imports the core; make it
# importable in tests without an install (the core is installed editable from src).
# tools/ holds dev-only generators (e.g. the MP vocabulary generator) — importable
# in tests but never part of the runtime package.
pythonpath = ["server", "tools"]
# Live tests hit the real network; deselected by default. Run with: pytest -m live
addopts = "-m 'not live'"
markers = [
    "live: exercises a real external API (Materials Project needs X_API_KEY; OpenAlex needs network; Bedrock needs AWS credentials)",
]
